# ecom

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  docker-compose.yml  go.mod  package-lock.json  package.json  pnpm-lock.yaml  podman-compose.yml  pom.xml  prometheus.yml
.github/: git-tag.yaml
account/: pom.xml
analytic/: pom.xml
auth/: Dockerfile  go.mod  go.sum  pom.xml  server.go
cart/: pom.xml
carts/: Dockerfile  go.mod  go.sum  server.go
chatbots/: pyproject.toml
customer/: pom.xml
image-upload/: Dockerfile  go.mod  server.go
jwt-service/: .env.example  Dockerfile  go.mod  go.sum  main.go
k8s/: README.md  applies.sh  refresh-authz.sh  setup-k3s.sh  shopiew.namespace.yaml  start.sh
kong/: Dockerfile  kong.yaml
message/: pom.xml
nginx/: nginx.conf
notification/: pom.xml
order/: pom.xml
payment/: pom.xml
product/: pom.xml
product-categories/: Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  README.md  SUMMARY.md  pom.xml
product-category/: Dockerfile  pom.xml
product-review/: Dockerfile  go.mod  main.go
product-reviews/: go.mod  main.go
product-variant/: pom.xml
products/: Dockerfile  pom.xml
search/: pom.xml
services/: build_and_push_to_dockerhub.sh  pom.xml
services/chatbots/: Dockerfile  pyproject.toml
services/chatbots/app/: chat_routes.py  main.py
services/chatbots/app/agents/: __init__.py
services/chatbots/app/agents/tools/: products_search.py
services/chatbots/app/routes/: chat_routes.py
services/chatbots/app/services/: chat_services.py
services/chatbots/app/utils/: httpx_clients.py
user/: go.mod  (+3 more)
(+648 files in other folders)
